--- a/python/templates/CollectionData.h.jinja2
+++ b/python/templates/CollectionData.h.jinja2
@@ -22,11 +22,12 @@
 
 #include <deque>
 #include <memory>
+#include <memory_resource>
 
 {{ utils.namespace_open(class.namespace) }}
 
 using {{ class.bare_type }}ObjPointerContainer = std::deque<{{ class.bare_type }}Obj*>;
-using {{ class.bare_type }}DataContainer = std::vector<{{ class.bare_type }}Data>;
+using {{ class.bare_type }}DataContainer = std::pmr::vector<{{ class.bare_type }}Data>;
 
 
 /**
@@ -79,6 +80,8 @@ public:
 {% endif %}
 
   bool setReferences(const podio::ICollectionProvider* collectionProvider, bool isSubsetColl);
+
+  {{ class.bare_type }}DataContainer getdata();
 
 private:
   // members to handle 1-to-N-relations
