--- a/python/templates/macros/collections.jinja2
+++ b/python/templates/macros/collections.jinja2
@@ -175,7 +175,7 @@ podio::CollectionReadBuffers createBuffersV{{ schemaVersion }}(bool isSubset) {
   readBuffers.references = new podio::CollRefCollection(nRefs);
   for (auto& ref : *readBuffers.references) {
     // Make sure to place usable buffer pointers here
-    ref = std::make_unique<std::vector<podio::ObjectID>>();
+    ref = std::make_unique<std::pmr::vector<podio::ObjectID>>();
   }
 
   readBuffers.vectorMembers = new podio::VectorMembersInfo();
